--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@300;400;500;600;700;800&display=swap');
 
 html.md,
 html.ios {
-  --ion-default-font: 'Poppins', 'Helvetica Neue', sans-serif !important;
+  --ion-default-font: 'Albert Sans', 'Helvetica Neue', sans-serif !important;
   --ion-background-color: #121212;
 }
 
@@ -12,7 +12,10 @@ html.ios {
 
 ion-button {
   text-transform: capitalize;
-  font-weight: 600;
   --border-radius: 10px;
   --box-shadow: none;
+}
+
+.primary-text {
+  color: #82ccdd;
 }
