--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -9,6 +9,8 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
+  --ion-tab-bar-color-selected: #556ee6;
+
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
