chore: changed tab-color-selected color: #e4e4e4

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -9,7 +9,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
-  --ion-tab-bar-color-selected: #556ee6;
+  --ion-tab-bar-color-selected: #e4e4e4;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
